# cpp-avx-utils

./: CMakeLists.txt  README.md  avx.hpp  example.cpp
include/: avx.hpp  double_include.inl  integer_include.inl
